tests/baselines/reference/es6ModuleModuleDeclaration.errors.txt
es6ModuleModuleDeclaration.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleModuleDeclaration.ts(4,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleModuleDeclaration.ts(8,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleModuleDeclaration.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleModuleDeclaration.ts(16,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleModuleDeclaration.ts(20,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es6ModuleModuleDeclaration.ts (6 errors) ====
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var a = 10;
        var b = 10;
        export module innerExportedModule {
                      ~~~~~~~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var k = 10;
            var l = 10;
        }
        export module innerNonExportedModule {
                      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var x = 10;
            var y = 10;
        }
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var a = 10;
        var b = 10;
        export module innerExportedModule {
                      ~~~~~~~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var k = 10;
            var l = 10;
        }
        export module innerNonExportedModule {
                      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var x = 10;
            var y = 10;
        }
    }